RESOLVED FIXED170710
Activate WebRTC data channel tests for WK1
https://bugs.webkit.org/show_bug.cgi?id=170710
Summary Activate WebRTC data channel tests for WK1
youenn fablet
Reported 2017-04-10 18:05:25 PDT
Activate WebRTC data channel tests for WK1
Attachments
Patch (10.97 KB, patch)
2017-04-10 18:08 PDT, youenn fablet
no flags
Patch for landing (10.86 KB, patch)
2017-04-11 09:43 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-04-10 18:08:37 PDT
Eric Carlson
Comment 2 2017-04-11 08:07:22 PDT
Comment on attachment 306765 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=306765&action=review > Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:67 > + ASSERT(client.factory()); Won't the m_peerConnectionFactory assignment above have crashed already if the factory is NULL?
youenn fablet
Comment 3 2017-04-11 09:43:55 PDT
Created attachment 306826 [details] Patch for landing
youenn fablet
Comment 4 2017-04-11 09:47:13 PDT
(In reply to Eric Carlson from comment #2) > Comment on attachment 306765 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=306765&action=review > > > Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:67 > > + ASSERT(client.factory()); > > Won't the m_peerConnectionFactory assignment above have crashed already if > the factory is NULL? This is undefined behavior so it should be fine but we should not do that. I removed the ASSERT. Hopefully, we can make factory() returning a reference now. I'll do this in a follow-up
WebKit Commit Bot
Comment 5 2017-04-11 10:27:13 PDT
Comment on attachment 306826 [details] Patch for landing Clearing flags on attachment: 306826 Committed r215239: <http://trac.webkit.org/changeset/215239>
WebKit Commit Bot
Comment 6 2017-04-11 10:27:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.