Activate WebRTC data channel tests for WK1 https://bugs.webkit.org/show_bug.cgi?id=170710

Patch by Youenn Fablet <youenn@apple.com> on 2017-04-11
Reviewed by Eric Carlson.

Source/WebCore:

Covered by existing and activated tests.

Making LibWebRTCProvider::factory not static.
For that purpose LibWebRTCMediaEndpoint now stores its peer connection factory reference.
Making LibWebRTCProvider use libebrtc networking by default.

Removing some no longer needed checks related to libwebrtc availability.

* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::LibWebRTCMediaEndpoint):
(WebCore::LibWebRTCMediaEndpoint::addTrack):
(WebCore::LibWebRTCMediaEndpoint::doCreateOffer):
(WebCore::LibWebRTCMediaEndpoint::doCreateAnswer):
* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.h:
* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::LibWebRTCProvider::factory):
* platform/mediastream/libwebrtc/LibWebRTCProvider.h:

Source/WebKit2:

* WebProcess/Network/webrtc/LibWebRTCProvider.h: Making sure networking is not done in the Web process.

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/187665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215239 268f45cc-cd09-0410-ab3c-d52691b4dbfc