Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.h
@@ -54,10 +54,11 @@ public:
 #if USE(LIBWEBRTC)
     WEBCORE_EXPORT virtual rtc::scoped_refptr<webrtc::PeerConnectionInterface> createPeerConnection(webrtc::PeerConnectionObserver&);
 
+    WEBCORE_EXPORT webrtc::PeerConnectionFactoryInterface* factory();
+
     // FIXME: Make these methods not static.
     static WEBCORE_EXPORT void callOnWebRTCNetworkThread(Function<void()>&&);
     static WEBCORE_EXPORT void callOnWebRTCSignalingThread(Function<void()>&&);
-    static WEBCORE_EXPORT webrtc::PeerConnectionFactoryInterface* factory();
     static WEBCORE_EXPORT void setDecoderFactoryGetter(Function<std::unique_ptr<cricket::WebRtcVideoDecoderFactory>()>&&);
     static WEBCORE_EXPORT void setEncoderFactoryGetter(Function<std::unique_ptr<cricket::WebRtcVideoEncoderFactory>()>&&);
 
@@ -71,6 +72,7 @@ protected:
     WEBCORE_EXPORT rtc::scoped_refptr<webrtc::PeerConnectionInterface> createPeerConnection(webrtc::PeerConnectionObserver&, rtc::NetworkManager&, rtc::PacketSocketFactory&);
 
     bool m_enableEnumeratingAllNetworkInterfaces { false };
+    bool m_useNetworkThreadWithSocketServer { true };
 #endif
 };
 
